force-app/main/default/objects/Truck__c/fields/CalendarColor__c.field-meta.xml
<CustomField>
    <fullName>CalendarColor__c</fullName>
    <label>CalendarColor</label>
    <length>6</length>
    <type>Text</type>
</CustomField>