force-app/main/default/objects/Truck__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <formula>&quot;&lt;div style=&apos;height: 30px; width: 30px; margin-bottom: 0px; background: #&quot; &amp;  CalendarColor__c  &amp; &quot;;&apos; /&gt;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color</label>
    <type>Text</type>
</CustomField>