force-app/main/default/objects/Truck__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Trucks</relationshipLabel>
    <relationshipName>Trucks</relationshipName>
    <type>Lookup</type>
</CustomField>