force-app/main/default/objects/Truck__c/fields/TotalTrips__c.field-meta.xml
<CustomField>
    <fullName>TotalTrips__c</fullName>
    <label>Total Trips</label>
    <summaryFilterItems>
        <field>Trip__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Trip__c.Truck__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>