force-app/main/default/objects/Truck__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TotalTrips__c</columns>
    <columns>UpcomingTrips__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>